[package]
name = "findora-exporter"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"

[dependencies]
simple_logger = "1.3"
log = "0.4"
anyhow = "1.0"
prometheus = "0.13"
ctrlc = { version = "3.2", features = ["termination"] }
tiny_http = "0.9"
ureq = { version = "2.3", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
