[package]
name = "findora-exporter"
version = "0.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"
documentation = "https://github.com/FindoraNetwork/findora-exporter"
homepage = "https://github.com/FindoraNetwork/findora-exporter"
repository = "https://github.com/FindoraNetwork/findora-exporter"
license = "MIT"
description = """
findora-exporter is a Prometheus custom exporter for exposing custom metrics.
"""

[dependencies]
simple_logger = { version = "1.15", default-features = false, features = ["threads"] }
log = "0.4"
anyhow = "1.0"
prometheus = "0.13"
ctrlc = { version = "3.2", features = ["termination"] }
tiny_http = "0.9"
ureq = { version = "2.3", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
nix = "0.23"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.deb]
maintainer-scripts = "debian/"
section = "utility"
license-file = ["LICENSE"]
assets = [
    ["target/x86_64-unknown-linux-musl/release/findora-exporter", "usr/bin", "755"],
]
extended-description = """\
the deb package will try to install the findora-exporter into systemd service
"""
