[package]
name = "findora-exporter"
version = "1.1.0"
authors = ["tommady <tommady@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
documentation = "https://github.com/FindoraNetwork/findora-exporter"
homepage = "https://github.com/FindoraNetwork/findora-exporter"
repository = "https://github.com/FindoraNetwork/findora-exporter"
license = "MIT"
description = """
findora-exporter is a Prometheus custom exporter for exposing custom metrics.
"""

[dependencies]
simple_logger = { version = "1.15", default-features = false, features = ["threads"] }
log = "0.4"
anyhow = "1.0"
prometheus = "0.13"
ctrlc = { version = "3.2", features = ["termination"] }
tiny_http = "0.10"
ureq = { version = "2.3", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
nix = "0.23"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.deb]
maintainer-scripts = "debian/"
section = "utility"
license-file = ["LICENSE"]
assets = [
    ["target/release/findora-exporter", "usr/local/bin/", "755"],
]
extended-description = """\
the deb package will try to install 
1. the findora-exporter as a systemd service
2. put the binary under /usr/local/bin/ folder
3. expecting a config file at /etc/prometheus/findora_exporter_config.json
"""

[package.metadata.deb.systemd-units]
unit-name = "findora-exporter"
start = false
